modified:   package-lock.json 	modified:   package.json 	modified:   src/Pages/ProductsPage.js 	new file:   src/components/BreadPanel.js 	new file:   src/css/BreadPanel.css 	modified:   src/css/Header.css 	modified:   src/css/main.css 	new file:   src/img/image-bread-stock.png 	modified:   src/index.js
	modified:   src/Pages/ProductsPage.js
	modified:   src/components/BreadPanel.js
	modified:   src/components/Header.js
	modified:   src/css/BreadPanel.css
	modified:   src/css/Header.css
	modified:   src/css/main.css

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,9 +12,9 @@ button{
     padding-bottom: 5px;
     padding-left: 15px; 
     padding-right: 15px;
-    background-color: #3448a2;
+    background-color: #424D84;
     color: #edecee;
-    border-color: #3448a2;
+    border-color: #424D84;
     border-width: 2px;
     border-radius: 10px;
     font-size:20px;
