--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,6 +1,6 @@
 header.topHeader{
     display: flex;
-    background-color: #3448a2;
+    background-color: #424D84;
     color: #edecee;
     padding: 20px; 
     font-weight: 600;
@@ -17,7 +17,7 @@ header.topHeader button{
     padding-left: 15px; 
     padding-right: 15px;
     background-color: #edecee;
-    color: #3448a2;
+    color: #424D84;
     border-color: #edecee;
     border-width: 2px;
     border-radius: 10px;
@@ -41,7 +41,7 @@ header.topHeader button.Enter{
     margin: 0;
     width: 100%;
     height: 100%;
-    background-color: #3448a2;
+    background-color: #424D84;
     border-color: #edecee;
     border-width: 2px;
     border-radius: 10px;
@@ -56,7 +56,7 @@ header.topHeader .LinkEnter{
 }
 header.topHeader button.Registration{
     margin: 0;
-    color: #3448a2;
+    color: #424D84;
     background-color: #edecee;
     border-color: #edecee;
     border-width: 2px;
