--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,3 +20,9 @@ button{
     font-size:20px;
     cursor:pointer
 }
+.panelTable{
+    width:100%;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-content:  center;
+}
