--- a/src/css/BreadPanel.css
+++ b/src/css/BreadPanel.css
@@ -1,14 +1,20 @@
 .panel{
- height: 200px;
- width: 140px;
- margin: 25px;
+ height: 270px;
+ width: 170px;
+ margin: 30px;
+ padding: 10px;
  display: flex;
  justify-content:  center;
+ border-radius:10px;
+ border:2px solid #f2f2f2;
+ text-align:center;
 }
 .panel img{
     height: auto;
     width:auto;
-    max-width: 120px;
+
+    max-width: 300px;
+    margin: 10px;
     max-height: 140px;
 }
 .LinkPanel{
