modified:   package-lock.json 	modified:   package.json 	modified:   src/Pages/EnterPage.js 	modified:   src/Pages/RegistrationPage.js 	modified:   src/components/Header.js 	modified:   src/css/Header.css

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -36,6 +36,20 @@ header.topHeader .rightContainer{
     justify-content:flex-end;
 
 }
+header .profileName{
+    
+    margin-top: 17px;
+    font-size: 30px;
+}
+header .exitIcon{
+    margin: 10px;
+    margin-left: 30px;
+    cursor: pointer;
+    transform: scale(2)
+}
+header .exitIcon:hover{
+    opacity:0.5;
+}
 header.topHeader button.Enter{
     color: #edecee;
     margin: 0;
