modified:   src/Pages/BreadDiscription/CraftBreadRecipePage.js 	modified:   src/Pages/BreadDiscription/PieRecipePage.js 	modified:   src/Pages/BreadDiscription/ProductDiscriptionPage.js 	modified:   src/Pages/EnterPage.js 	modified:   src/Pages/Navigation/ProductsPage.js 	modified:   src/Pages/RegistrationPage.js 	modified:   src/components/BreadPanel.js 	modified:   src/components/Header.js 	new file:   src/components/Review.js 	new file:   src/css/Description.css 	modified:   src/css/main.css 	modified:   src/index.js

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,3 +26,7 @@ button{
     grid-template-columns: repeat(4,1fr);
     justify-content:  center;
 }
+.review{
+    background-color: #e3e3e3;
+    margin: 5px;
+}
